# PolyArt_GA

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config_example.json
polygon_gene_algo/: __main__.py
polygon_gene_algo/io/: __init__.py  io.py
polygon_gene_algo/run_ga/: __init__.py  evolution.py  run_ga.py
