[tool.poetry]
name = "polygon-gene-algo-private"
version = "0.1.0"
description = ""
authors = ["Damyoneeic"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygad = "3.3.1"
opencv-python = "4.10.0.82"
numpy = "1.26.4"
matplotlib = "3.9.0"
pandas = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
